--- a/src/css/main.less
+++ b/src/css/main.less
@@ -1,6 +1,8 @@
 
 @import url('https://fonts.googleapis.com/css?family=Nunito:200&display=swap');
 
+background: transparent;
+
 content {
 	background: #474545;
 	display: block;
